--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,12 @@
         {
             "type": "package",
             "package": {
-                "name": "wordpress/wordpress-ja",
+                "name": "wordpress/wordpress",
                 "type": "webroot",
-                "version": "4.1.1",
+                "version": "4.2.3",
                 "dist": {
                     "type": "zip",
-                    "url": "https://ja.wordpress.org/wordpress-4.1.1-ja.zip"
+                    "url": "https://wordpress.org/wordpress-4.2.3.zip"
                 },
                 "require": {
                     "fancyguy/webroot-installer": "~1.1"
